[gd_scene load_steps=4 format=2]

[ext_resource path="res://TerrainPrefabs/Pushable.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=2]

[node name="Pushable" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="Terrain" type="Area2D" parent="." groups=["Terrain"]]
position = Vector2( 0, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -10.0
margin_top = -20.0
margin_right = 10.0
color = Color( 0, 0, 0, 1 )

[node name="PushLeft" type="Area2D" parent="."]
position = Vector2( -10, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushLeft"]
shape = SubResource( 2 )

[node name="PushRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushRight"]
position = Vector2( 10, -10 )
shape = SubResource( 2 )

[connection signal="area_entered" from="PushLeft" to="." method="_on_PushLeft_area_entered"]
[connection signal="area_exited" from="PushLeft" to="." method="_on_PushLeft_area_exited"]
[connection signal="area_entered" from="PushRight" to="." method="_on_PushRight_area_entered"]
[connection signal="area_exited" from="PushRight" to="." method="_on_PushRight_area_exited"]
